2002-11-04  David Hampton  <hampton@employees.org>

	* src/engine/Transaction.c: New functions to get/set read-only
	status on a transaction, and to print a warning message if a
	transaction is read-only.  The engine will not let you delete a
	transaction (or split in a transaction) that is marked read-only.

	* src/business/business-core/gncInvoice.c
	(gncInvoicePostToAccount): Mark as read-only transactions that are
	generated from an invoice.

	* src/gnome/gnc-split-reg.c (gsr_default_delete_handler): 
	(gsr_default_reinit_handler): Honor the read-only setting on a
	transaction.

	* src/register/ledger-core/split-register-model.c
	(gnc_split_register_confirm): Honor the read-only setting on a
	transaction.

2002-11-04  Herbert Thoma  <herbie@hthoma.de>

	* /src/report/standard-reports/cash-flow.scm: new report
	which shows inflow and outflow of money to a set of accounts

	* src/report/standard-reports/standard-reports.scm: add 
	cash-flow.scm to gncscmmod_DATA

2002-11-04  Derek Atkins  <derek@ihtfp.com>

	* src/gnome/gnc-split-reg.c: remove reference to gnc-regwidget.h
	  (which no longer exists)

	* src/gnome-utils/gnc-gui-query.c: use the right string when building
	  the dialog (use the output from vsprintf, not the input)

	* src/app-utils/Makefile.am: install i18n.h but don't include it
	  in the DIST tarball -- let it be generated from i18n.h.in, which
	  IS distributed.

	* src/business/business-reports/invoice.scm: fix some strings
	  "Invoice Terms" -> "Billing Terms"
	
2002-11-03  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-sxsincelast.c: Use GNCSplitReg over
	GNCRegWidget.

	* src/gnome/dialog-scheduledxaction.c
	(schedXact_editor_create_ledger): Use GNCSplitReg over
	GNCRegWidget.

	* src/gnome/glade/register.glade: Moved a bunch of the
	previously-shared widget definitions into seperate places to be
	accessed by window-register.c and gnc-split-reg.c.

	* src/gnome/window-register.c: Massive code-sucking into